--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,8 +4,8 @@
     <div class="card-product m-4">
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
       <div class="card-product-infos">
-        <h2><%= product.title %></h2>
-        <h2><%= product.tagline %></h2>
+        <h2><%= product.name %></h2>
+        <p><%= product.tagline %></p>
       </div>
     </div>
   <% end %>
